--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="container">
-            <img id="logo" src="imgs/pxlogo.png" alt="Pixel Store">
+            <a href="index.html"><img id="logo" src="imgs/pxlogo.png" alt="Pixel Store"></a>
             <article id="m-btn"><i class="fas fa-bars"></i></article>
             <nav id="menu">
                 <ul id="menu-items">
