--- a/index.html
+++ b/index.html
@@ -135,18 +135,21 @@
         </section>
         <footer>Pixel Store &copy; 2021</footer>
         <script>
-            let menu = $('#menu-items');
-            $(document).mouseup(function(e){
-           if (!menu.is(e.target)
-               && menu.has(e.target).length === 0)
-               {
-                  menu.hide();
-               }
-            });
 
-            $('#m-btn').click(function(e) {
-                $('#menu-items').slideToggle();
-            });
+            if (window.innerWidth < 900) {
+                let menu = $('#menu-items');
+                $(document).mouseup(function(e){
+               if (!menu.is(e.target)
+                   && menu.has(e.target).length === 0)
+                   {
+                      menu.hide();
+                   }
+                });
+
+                $('#m-btn').click(function(e) {
+                    $('#menu-items').slideToggle();
+                });
+            }
         </script>
 </body>
 </html>
