--- a/ranking.html
+++ b/ranking.html
@@ -18,7 +18,8 @@
             <nav id="menu">
                 <ul id="menu-items">
                     <a href="ranking.html" class="menu-item"><li>Ranking</li></a>
-                    <a href="index.html" class="login"><li>Voltar</li></a>
+                    <a href="login.html" class="entrar"><li>Entrar</li></a>
+                    <a href="index.html" class="login"><li>Inicio</li></a>
                 </ul>
             </nav>
         </div>
@@ -61,18 +62,21 @@
 
     <footer>Pixel Store &copy; 2021</footer>
     <script>
-        let menu = $('#menu-items');
-        $(document).mouseup(function(e){
-       if (!menu.is(e.target)
-           && menu.has(e.target).length === 0)
-           {
-              menu.hide();
-           }
-        });
 
-        $('#m-btn').click(function(e) {
-            $('#menu-items').slideToggle();
-        });
-    </script>
+            if (window.innerWidth < 900) {
+                let menu = $('#menu-items');
+                $(document).mouseup(function(e){
+               if (!menu.is(e.target)
+                   && menu.has(e.target).length === 0)
+                   {
+                      menu.hide();
+                   }
+                });
+
+                $('#m-btn').click(function(e) {
+                    $('#menu-items').slideToggle();
+                });
+            }
+        </script>
 </body>
 </html>
