--- a/ranking.html
+++ b/ranking.html
@@ -34,28 +34,28 @@
             </tr>
             <tr>
                 <td>1º</td>
-                <td>paodeeforma</td>
-                <td>500kk </td>
+                <td>Majorir</td>
+                <td>653kk </td>
             </tr>
             <tr>
                 <td>2º</td>
-                <td>paodeeforma</td>
-                <td>400kk </td>
+                <td>lawric_</td>
+                <td>549kk</td>
             </tr>
             <tr>
                 <td>3º</td>
-                <td>paodeeforma</td>
-                <td>300kk </td>
+                <td>0zecolmeia0</td>
+                <td>532kk</td>
             </tr>
             <tr>
                 <td>4º</td>
-                <td>paodeeforma</td>
-                <td>200kk </td>
+                <td>カイツーヒツリ</td>
+                <td>503kk</td>
             </tr>
             <tr>
                 <td>5º</td>
-                <td>paodeeforma</td>
-                <td>100kk </td>
+                <td>flyrie</td>
+                <td>467kk</td>
             </tr>
         </table>
     </section>
