--- a/ranking.html
+++ b/ranking.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta keywords="Cyberbutt, game, hentai game, hentai, slap">
+    <meta robots="ALL">
+    <meta rating="general">
+    <meta property="og:site_site" content="Pixel Store">
+    <meta property="og:url" content="andre-sc.github.io/pixelstore/ranking.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Pixel Store">
+    <meta property="og:image" content="andre-sc.github.io/pixelstore/imgs/pxlogo.png">
+    <meta property="og:image:width" content="176">
+    <meta property="og:image:height" content="40">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <title>Pixel Store</title>
@@ -34,28 +44,28 @@
             </tr>
             <tr>
                 <td>1º</td>
-                <td>Majorir</td>
-                <td>653kk </td>
+                <td>paodeeforma</td>
+                <td>500kk </td>
             </tr>
             <tr>
                 <td>2º</td>
-                <td>lawric_</td>
-                <td>549kk</td>
+                <td>paodeeforma</td>
+                <td>400kk </td>
             </tr>
             <tr>
                 <td>3º</td>
-                <td>0zecolmeia0</td>
-                <td>532kk</td>
+                <td>paodeeforma</td>
+                <td>300kk </td>
             </tr>
             <tr>
                 <td>4º</td>
-                <td>カイツーヒツリ</td>
-                <td>503kk</td>
+                <td>paodeeforma</td>
+                <td>200kk </td>
             </tr>
             <tr>
                 <td>5º</td>
-                <td>flyrie</td>
-                <td>467kk</td>
+                <td>paodeeforma</td>
+                <td>100kk </td>
             </tr>
         </table>
     </section>
