--- a/login.html
+++ b/login.html
@@ -8,10 +8,10 @@
     <meta robots="ALL">
     <meta rating="general">
     <meta property="og:site_site" content="Pixel Store">
-    <meta property="og:url" content="andre-sc.github.io/pixelstore/login.html">
+    <meta property="og:url" content="https://andre-sc.github.io/pixelstore/login.html">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Pixel Store">
-    <meta property="og:image" content="andre-sc.github.io/pixelstore/imgs/pxlogo.png">
+    <meta property="og:image" content="https://andre-sc.github.io/pixelstore/imgs/pxlogo.png">
     <meta property="og:image:width" content="176">
     <meta property="og:image:height" content="40">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
