--- a/ranking.html
+++ b/ranking.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta keywords="Cyberbutt, game, hentai game, hentai, slap">
-    <meta robots="ALL">
     <meta rating="general">
     <meta property="og:site_site" content="Pixel Store">
-    <meta property="og:url" content="andre-sc.github.io/pixelstore/ranking.html">
+    <meta property="og:url" content="https://andre-sc.github.io/pixelstore/ranking.html">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Pixel Store">
-    <meta property="og:image" content="andre-sc.github.io/pixelstore/imgs/pxlogo.png">
+    <meta property="og:image" content="https://andre-sc.github.io/pixelstore/imgs/pxlogo.png">
     <meta property="og:image:width" content="176">
     <meta property="og:image:height" content="40">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
