--- a/ranking.html
+++ b/ranking.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta description="Compre softwares e key de jogos da steam com pixels!">
     <meta rating="general">
     <meta property="og:site_site" content="Pixel Store">
     <meta property="og:url" content="https://andre-sc.github.io/pixelstore/ranking.html">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Pixel Store">
+    <meta property="og:description" content="Compre softwares e key de jogos da steam com pixels!">
     <meta property="og:image" content="https://andre-sc.github.io/pixelstore/imgs/pxlogo.png">
     <meta property="og:image:width" content="176">
     <meta property="og:image:height" content="40">
