Update meta tags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta description="Compre softwares e key de jogos da steam com pixels!">
     <meta rating="general">
     <meta property="og:site_site" content="Pixel Store">
-    <meta property="og:url" content="https://andre-sc.github.io/pixelstore/index.html">
+    <meta property="og:url" content="https://andre-sc.github.io/pixelstore/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Pixel Store">
     <meta property="og:description" content="Compre softwares e key de jogos da steam com pixels!">
